# ac-lib

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/graph/: bfs.rs  dfs.rs  dijkstra.rs  mod.rs  unionfind.rs
src/math/: gcd.rs  mod.rs  modint.rs  prime.rs
src/structure/: fenwick.rs  mod.rs  segtree.rs
tests/: graph_tests.rs  math_tests.rs  structure_tests.rs
